syntax = "proto2";
package pb;

message HTTP {
	enum Protocol {
		HTTP_PROTOCOL_UNKNOWN = 0;
		HTTP10 = 1;
		HTTP11 = 2;
	}
	optional Protocol protocol = 1;

	optional uint32 status = 2;
	optional uint32 host_status = 3;
	optional uint32 up_status = 4;

	enum Method {
		METHOD_UNKNOWN = 0;
		GET = 1;
		POST = 2;
		DELETE = 3;
		PUT = 4;
		HEAD = 5;
		PURGE = 6;
		OPTIONS = 7;
		PROPFIND = 8;
		MKCOL = 9;
		PATCH = 10;
	}
	optional Method method = 5;

	optional string content_type = 6;
	optional string user_agent = 7;
	optional string referer = 8;
	optional string request_uri = 9;
}

enum CacheStatus {
	CACHESTATUS_UNKNOWN = 0;
	MISS = 1;
	EXPIRED = 2;
	HIT = 3;
}

message Origin {
	optional bytes ip = 1;
	optional uint32 port = 2;
	optional string hostname = 3;
	enum Protocol {
		ORIGIN_PROTOCOL_UNKNOWN = 0;
		HTTP = 1;
		HTTPS = 2;
	}
	optional Protocol protocol = 4;
}

enum ZonePlan {
	ZONEPLAN_UNKNOWN = 0;
	FREE = 1;
	PRO = 2;
	BIZ = 3;
	ENT = 4;
}

message Log {
	optional sfixed64 timestamp = 1;
	optional uint32 zone_id = 2;
	optional ZonePlan zone_plan = 3;
	optional HTTP http = 4;
	optional Origin origin = 5;
	optional Country country = 6;
	optional CacheStatus cache_status = 7;
	optional bytes server_ip = 8;
	optional string server_name = 9;
	optional bytes remote_ip = 10;
	optional uint64 bytes_dlv = 11;
	optional string ray_id = 12;
}

enum Country {
	UNKNOWN = 0;
	A1 = 1;
	A2 = 2;
	O1 = 3;
	AD = 4;
	AE = 5;
	AF = 6;
	AG = 7;
	AI = 8;
	AL = 9;
	AM = 10;
	AO = 11;
	AP = 12;
	AQ = 13;
	AR = 14;
	AS = 15;
	AT = 16;
	AU = 17;
	AW = 18;
	AX = 19;
	AZ = 20;
	BA = 21;
	BB = 22;
	BD = 23;
	BE = 24;
	BF = 25;
	BG = 26;
	BH = 27;
	BI = 28;
	BJ = 29;
	BL = 30;
	BM = 31;
	BN = 32;
	BO = 33;
	BQ = 34;
	BR = 35;
	BS = 36;
	BT = 37;
	BV = 38;
	BW = 39;
	BY = 40;
	BZ = 41;
	CA = 42;
	CC = 43;
	CD = 44;
	CF = 45;
	CG = 46;
	CH = 47;
	CI = 48;
	CK = 49;
	CL = 50;
	CM = 51;
	CN = 52;
	CO = 53;
	CR = 54;
	CU = 55;
	CV = 56;
	CW = 57;
	CX = 58;
	CY = 59;
	CZ = 60;
	DE = 61;
	DJ = 62;
	DK = 63;
	DM = 64;
	DO = 65;
	DZ = 66;
	EC = 67;
	EE = 68;
	EG = 69;
	EH = 70;
	ER = 71;
	ES = 72;
	ET = 73;
	EU = 74;
	FI = 75;
	FJ = 76;
	FK = 77;
	FM = 78;
	FO = 79;
	FR = 80;
	GA = 81;
	GB = 82;
	GD = 83;
	GE = 84;
	GF = 85;
	GG = 86;
	GH = 87;
	GI = 88;
	GL = 89;
	GM = 90;
	GN = 91;
	GP = 92;
	GQ = 93;
	GR = 94;
	GS = 95;
	GT = 96;
	GU = 97;
	GW = 98;
	GY = 99;
	HK = 100;
	HM = 101;
	HN = 102;
	HR = 103;
	HT = 104;
	HU = 105;
	ID = 106;
	IE = 107;
	IL = 108;
	IM = 109;
	IN = 110;
	IO = 111;
	IQ = 112;
	IR = 113;
	IS = 114;
	IT = 115;
	JE = 116;
	JM = 117;
	JO = 118;
	JP = 119;
	KE = 120;
	KG = 121;
	KH = 122;
	KI = 123;
	KM = 124;
	KN = 125;
	KP = 126;
	KR = 127;
	KW = 128;
	KY = 129;
	KZ = 130;
	LA = 131;
	LB = 132;
	LC = 133;
	LI = 134;
	LK = 135;
	LR = 136;
	LS = 137;
	LT = 138;
	LU = 139;
	LV = 140;
	LY = 141;
	MA = 142;
	MC = 143;
	MD = 144;
	ME = 145;
	MF = 146;
	MG = 147;
	MH = 148;
	MK = 149;
	ML = 150;
	MM = 151;
	MN = 152;
	MO = 153;
	MP = 154;
	MQ = 155;
	MR = 156;
	MS = 157;
	MT = 158;
	MU = 159;
	MV = 160;
	MW = 161;
	MX = 162;
	MY = 163;
	MZ = 164;
	NA = 165;
	NC = 166;
	NE = 167;
	NF = 168;
	NG = 169;
	NI = 170;
	NL = 171;
	NO = 172;
	NP = 173;
	NR = 174;
	NU = 175;
	NZ = 176;
	OM = 177;
	PA = 178;
	PE = 179;
	PF = 180;
	PG = 181;
	PH = 182;
	PK = 183;
	PL = 184;
	PM = 185;
	PN = 186;
	PR = 187;
	PS = 188;
	PT = 189;
	PW = 190;
	PY = 191;
	QA = 192;
	RE = 193;
	RO = 194;
	RS = 195;
	RU = 196;
	RW = 197;
	SA = 198;
	SB = 199;
	SC = 200;
	SD = 201;
	SE = 202;
	SG = 203;
	SH = 204;
	SI = 205;
	SJ = 206;
	SK = 207;
	SL = 208;
	SM = 209;
	SN = 210;
	SO = 211;
	SR = 212;
	SS = 213;
	ST = 214;
	SV = 215;
	SX = 216;
	SY = 217;
	SZ = 218;
	TC = 219;
	TD = 220;
	TF = 221;
	TG = 222;
	TH = 223;
	TJ = 224;
	TK = 225;
	TL = 226;
	TM = 227;
	TN = 228;
	TO = 229;
	TR = 230;
	TT = 231;
	TV = 232;
	TW = 233;
	TZ = 234;
	UA = 235;
	UG = 236;
	UM = 237;
	US = 238;
	UY = 239;
	UZ = 240;
	VA = 241;
	VC = 242;
	VE = 243;
	VG = 244;
	VI = 245;
	VN = 246;
	VU = 247;
	WF = 248;
	WS = 249;
	XX = 250;
	YE = 251;
	YT = 252;
	ZA = 253;
	ZM = 254;
	ZW = 255;
}
